in vscode from colab branch

--- a/forfinal.ipynb
+++ b/forfinal.ipynb
@@ -136,6 +136,16 @@
       "source": [
         "# Made the following changes in collabattempt branch"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "836f6381",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# This is a change made in the colab branch in vscode"
+      ]
     }
   ],
   "metadata": {
