--- a/forfinal.ipynb
+++ b/forfinal.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AdamKimhub/Msproject1/blob/main/forfinal.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AdamKimhub/Msproject1/blob/colab/forfinal.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "efzuIWLS3IIX",
       "metadata": {
         "colab": {
@@ -131,7 +131,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "b3d23eba",
-      "metadata": {},
+      "metadata": {
+        "id": "b3d23eba"
+      },
       "outputs": [],
       "source": [
         "# Made the following changes in collabattempt branch"
@@ -141,17 +143,31 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "836f6381",
-      "metadata": {},
+      "metadata": {
+        "id": "836f6381"
+      },
       "outputs": [],
       "source": [
         "# This is a change made in the colab branch in vscode"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Made this change in colab in the colab branch"
+      ],
+      "metadata": {
+        "id": "OxUw7808luVH"
+      },
+      "id": "OxUw7808luVH",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "MsProject",
