--- a/working_with_defect_struct.ipynb
+++ b/working_with_defect_struct.ipynb
@@ -118,6 +118,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`nodes` = node features (matrix, one row per node)\n",
+    "\n",
+    "`edges` = connectivity (which node connects to which node)\n",
+    "\n",
+    "`edge_features` = edge features (like distance)\n",
+    "\n",
+    "`y` = target (band gap)\n",
+    "\n",
+    "`u` = global features (formation energy, total_mag, etc.)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -126,7 +141,7 @@
     "def get_nodes_edges(structure):\n",
     "    sites_list = structure.sites\n",
     "\n",
-    "    # The nodes\n",
+    "    # The nodes: These are the sites features\n",
     "    mdnn = MinimumDistanceNN()\n",
     "    nodes = []\n",
     "    for i, site in enumerate(sites_list):\n",
@@ -135,15 +150,14 @@
     "                         site.properties[\"an_change\"], site.properties[\"vacancy_defect\"],\n",
     "                         site.properties[\"substitution_defect\"]]\n",
     "        # Node features syntax\n",
-    "        '''[index of site, number of nearset neighbors to site, atomic numbe of element before defect,\n",
-    "        atomic number of element after defect, change in atomic numbers,\n",
-    "        is site vac_site(1  for yes, 0 for no), is site sub_site(1 for yes, 0 for no)]'''\n",
+    "        '''[index of site, number of nearset neighbors to site, Z_before defect,\n",
+    "        Z_after defect, Z_change, is site vac_site(1  for yes, 0 for no), is site sub_site(1 for yes, 0 for no)]'''\n",
     "        nodes.append(node_features)\n",
     "         \n",
     "\n",
     "    # The edges\n",
-    "    edges = []\n",
-    "    edge_features = []\n",
+    "    edges = [] # The sites in relation\n",
+    "    edge_features = [] # The distance between each site\n",
     "    \n",
     "    for i, site_i in enumerate(sites_list):\n",
     "        for j, site_j  in enumerate(sites_list):\n",
