--- a/forfinal.ipynb
+++ b/forfinal.ipynb
@@ -75,16 +75,68 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "a29aa3ad",
+      "metadata": {},
+      "source": [
+        "## Attributes\n",
+        "Which attributes are the targets and which are the features?\n",
+        "1. HOMO value\n",
+        "2. LUMO value\n",
+        "3. Formtion energy*\n",
+        "4. Formation energy per site*\n",
+        "\n",
+        "The target values (formation energy, HOMO, LUMO, etc.) are what the model needs to learn to predict.\n",
+        "\n",
+        "If included, the model might “cheat” by directly using them instead of learning from the structure and other features."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "dd4ac372",
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "id": "98ef90d0",
+      "metadata": {},
+      "source": [
+        "x = node features (matrix, one row per node)\n",
+        "\n",
+        "edge_index = connectivity (which node connects to which node)\n",
+        "\n",
+        "edge_attr = edge features (like distance)\n",
+        "\n",
+        "y = target (band gap)\n",
+        "\n",
+        "u = global features (formation energy, total_mag, etc.)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d0504703",
+      "metadata": {},
+      "source": [
+        "I think the formula that the model should get is, if you have material x missing(vacancy defect) in the lattice or replaced by material y(the substitutional defect), the energy change in that site has a specific value(formation energy). When this value is combined with other formation energies at different defect sites at distances z, you get a positive or negative change to the band gap of the host materials.\n",
+        "So attributes will be:\n",
+        "1. Defect type(vacncy or substitutional)\n",
+        "2. Atomic number change of the site.(from here you get the formation energy)\n",
+        "3. Get formation energy relation with distance. "
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "7d79d117",
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
         "# Seperate the target columns from the attribute columns\n",
-        "target_columns = [\"norm_homo\", \"norm_lumo\"]\n",
-        "defects_df_x, defects_df_y = props_targets(defects_df,target_columns)\n"
+        "target_columns = [\"formation_energy\", \"norm_homo\", \"norm_lumo\"]\n",
+        "defects_df_x, defects_df_y = props_targets(defects_df,target_columns)"
       ]
     },
     {
@@ -94,12 +146,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
         "# Split the data into train, validation and test sets\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "# Assume df contains structures and properties\n",
-        "train_df_x, test_df_x, train_df_y, test_df_y= train_test_split(defects_df_x, defects_df_y test_size=0.2,\n",
+        "train_df_x, test_df_x, train_df_y, test_df_y= train_test_split(defects_df_x, defects_df_y, test_size=0.2,\n",
         "                                    stratify= defects_df_x[\"dataset_material\"],\n",
         "                                    random_state=42)\n",
         "\n",
