complete lists for graphs

--- a/cif_to_graph.ipynb
+++ b/cif_to_graph.ipynb
@@ -9,6 +9,7 @@
     "from pathlib import Path\n",
     "import ast\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from pymatgen.core import Structure, PeriodicSite, DummySpecie\n",
     "from pymatgen.analysis.local_env import MinimumDistanceNN\n"
    ]
@@ -19,14 +20,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the data\n",
+    "# dataset_df = pd.read_csv(\"dataset/combined/high_GaSe.csv\")\n",
+    "\n",
     "# Load defective structure\n",
-    "defective_file_path = Path(\"dataset/low_MoS2/cifs/6141cf1a1d648932fbc34297.cif\")\n",
+    "# an_index = 10\n",
+    "# defective_file_path = f\"dataset/{dataset_df['dataset_material'][an_index]}/cifs/{dataset_df['_id'][an_index]}.cif\n",
+    "defective_file_path = Path(\"dataset/high_GaSe/cifs/GaSe_Ga72Se69S1_90b1b09f-acf0-46e6-8173-a2e71c884054.cif\")\n",
     "defective_structure = Structure.from_file(defective_file_path)\n",
     "\n",
     "# Get reference structure\n",
-    "ref_file_path = Path(\"dataset/low_MoS2/MoS2.cif\")\n",
+    "# ref_file_path = f\"dataset/{dataset_df['dataset_material'][an_index]}/{dataset_df['base'][an_index]}.cif\"\n",
+    "ref_file_path = Path(\"dataset/high_GaSe/GaSe.cif\")\n",
     "ref_unit_cell = Structure.from_file(ref_file_path)\n",
-    "reference_structure = ref_unit_cell.make_supercell([8,8,1])"
+    "reference_structure = ref_unit_cell.make_supercell([6,6,1])"
    ]
   },
   {
@@ -104,32 +111,10 @@
     "        else:\n",
     "            pass\n",
     "\n",
-    "    return defects_struct"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return defects_struct\n",
+    "\n",
     "defects_structure = get_defects_structure(defective_structure, reference_structure)\n",
     "print(defects_structure)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`nodes` = node features (matrix, one row per node)\n",
-    "\n",
-    "`edges` = connectivity (which node connects to which node)\n",
-    "\n",
-    "`edge_features` = edge features (like distance)\n",
-    "\n",
-    "`y` = target (band gap)\n",
-    "\n",
-    "`u` = global features (formation energy, total_mag, etc.)"
    ]
   },
   {
@@ -167,7 +152,11 @@
     "                edge_features.append([dist])\n",
     "\n",
     "    return nodes, edges, edge_features\n",
-    "    "
+    "\n",
+    "the_nodes, the_edges, the_edge_features = get_nodes_edges(defects_structure)\n",
+    "print(the_nodes)\n",
+    "print(the_edges)\n",
+    "print(the_edge_features)"
    ]
   },
   {
@@ -176,7 +165,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "the_nodes, the_edges, the_edge_features = get_nodes_edges(defects_structure)"
+    "def get_gf_tf(df, cif_id):\n",
+    "    # The global attributes\n",
+    "    global_attributes = [\"energy\",\"fermi_level\",\"total_mag\",\"formation_energy\",\n",
+    "                         \"energy_per_atom\",\"E_1\",\"vacancy_sites\",\n",
+    "                         \"substitution_sites\",\"defect_sites\"\n",
+    "                         ]\n",
+    "    \n",
+    "    target_attribute = \"band_gap_value\"\n",
+    "    \n",
+    "    # Get index of cif id\n",
+    "    index_value = df[df[\"_id\"] == cif_id].index.values[0]\n",
+    "    \n",
+    "    # Use index to get values of global attributes\n",
+    "    gf = [df[i][index_value] for i in global_attributes]\n",
+    "\n",
+    "    # Use index to get value of target attribute\n",
+    "    tf = [df[target_attribute][index_value]]\n",
+    "        \n",
+    "    return gf,tf\n",
+    "\n",
+    "# an_id = dataset_df['_id'][an_index]\n",
+    "an_id = \"GaSe_Ga72Se69S1_90b1b09f-acf0-46e6-8173-a2e71c884054\"\n",
+    "the_gf, the_tf = get_gf_tf(dataset_df, an_id)\n",
+    "print(the_gf, the_tf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now represent th following as a ml friendly data:\n",
+    "`nodes` = node features (matrix, one row per node/atom)\n",
+    "\n",
+    "`edges` = connectivity (which atom/node connects to which node/atom)\n",
+    "\n",
+    "`edge_features` = edge features (distance between every atom/node)\n",
+    "\n",
+    "`y` = target (band gap)\n",
+    "\n",
+    "`u` = global features (formation energy, total_mag, etc.)"
    ]
   }
  ],
