Done testing if combining works

--- a/combine.ipynb
+++ b/combine.ipynb
@@ -3,6 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e91cf03c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "if \"google.colab\" in sys.modules:\n",
+    "    # Mount Google Drive\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
+    "    dataset_path = '/content/drive/My Drive/dataset'\n",
+    "\n",
+    "    # Install required packages\n",
+    "    !pip install pymatgen\n",
+    "\n",
+    "else:\n",
+    "    dataset_path = 'dataset'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7ef34d3d",
    "metadata": {},
    "outputs": [],
@@ -35,10 +57,10 @@
     "the_material = parts[1]\n",
     "\n",
     "# Load the data to df\n",
-    "defects_df = pd.read_csv(Path(f\"dataset/{mat_dataset}/defects.csv\"))\n",
-    "description_df = pd.read_csv(Path(f\"dataset/{mat_dataset}/descriptors.csv\"))\n",
-    "structure_df = pd.read_csv(Path(\"dataset/initial_structures.csv\"))\n",
-    "elements_df = pd.read_csv(Path(\"dataset/elements.csv\"))"
+    "defects_df = pd.read_csv(Path(f\"{dataset_path}/{mat_dataset}/defects.csv\"))\n",
+    "description_df = pd.read_csv(Path(f\"{dataset_path}/{mat_dataset}/descriptors.csv\"))\n",
+    "structure_df = pd.read_csv(Path(f\"{dataset_path}/initial_structures.csv\"))\n",
+    "elements_df = pd.read_csv(Path(f\"{dataset_path}/elements.csv\"))"
    ]
   },
   {
@@ -360,26 +382,6 @@
     "    merged_df = merged_df.drop([\"defects\", \"descriptor_id\", \"homo_lumo_gap\", \n",
     "                                \"band_gap\", \"homo\", \"lumo\", \"description\", \"pbc\"], axis=1)\n",
     "    merged_df[\"total_mag\"] = 0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "40df29c7",
-   "metadata": {},
-   "source": [
-    "## Save the dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d01dbf2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Return the new df as csv\n",
-    "new_csv_file = Path(f\"dataset/combined/{mat_dataset}.csv\")\n",
-    "merged_df.to_csv(new_csv_file)"
    ]
   }
  ],
